--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -5,18 +5,27 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.example.wear"
+        applicationId "com.example.intrek"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        buildTypes.each {
+            project.ext.constants.each {
+                k, v ->
+                    it.buildConfigField 'String', "W_${k}", "\"${v}\""
+                    it.resValue 'string', "W_${k}", v
+            }
+        }
     }
+
 }
 
 dependencies {
@@ -27,7 +36,9 @@ dependencies {
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.wear:wear:1.0.0'
+
     //noinspection GradleCompatible
-    implementation 'com.android.support:wear:28.0.0'
+    //implementation 'com.android.support:wear:28.0.0'
     compileOnly 'com.google.android.wearable:wearable:2.5.0'
 }
