--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".ui.main.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,9 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
+
+        <activity android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".ui.main.TypePickerPopUp"
+            android:theme="@style/AppTheme.CustomTheme">
+        </activity>
+
+
 
 
         <service android:name=".WearService">
