--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ allprojects {
         constants = [
                 path_start_activity     : "/START_ACTIVITY",
                 start_activity: "START_ACTIVITY",
+
+                path_send_HR:"/SEND_HR",
+                heart_rate:"HEART_RATE",
         ]
     }
 }
