--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     implementation 'androidx.wear:wear:1.0.0'
 
     //noinspection GradleCompatible
