--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.example.intrek">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
+    <uses-permission android:name = "android.permission.BODY_SENSORS"/>
     <uses-feature android:name="android.hardware.type.watch" />
 
     <application
