I added the plot of the HR on the live recording activity. So we can now plot things on the screen fairly easily. What's next: - display of the time, speed, distance and altitude gained - display of the position as well

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
 
     wearApp project(':wear')
     implementation 'com.google.android.gms:play-services-wearable:17.0.0'
+    implementation 'com.androidplot:androidplot-core:1.5.6'
 }
