--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.RecordingAnalysisActivity"></activity>
+        <activity android:name=".ui.main.RecordingAnalysisActivity" />
         <activity android:name=".ui.main.LiveMapActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -51,6 +51,7 @@
             android:name=".ui.main.TypePickerPopUp"
             android:theme="@style/AppTheme.CustomTheme" />
         <activity android:name=".SensorTile.DeviceScanActivity" />
+        <activity android:name=".SensorTile.BlePopUp" />
 
         <service android:name=".WearService">
             <intent-filter>
