- Firebase is working fine. Possible to save hikes and to retrieve them - I added the template to fill for Adrien. The only thing to be done is to complete all the new TODO in order to get the microcontroller's data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.RecordingAnalysisActivity" />
+        <activity
+            android:name=".ui.main.RecordingAnalysisActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".ui.main.LiveMapActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -33,14 +35,21 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+
         <activity
             android:name=".ui.main.LiveRecordingActivity">
+        </activity>
+        <activity
+            android:name=".ui.main.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
         <activity
             android:name=".ui.main.InformationActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -50,10 +59,7 @@
         <activity
             android:name=".ui.main.EmailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ui.main.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+
         <activity android:name=".MainActivity" />
         <activity
             android:name=".ui.main.TypePickerPopUp"
