Commit with many small modification - diplay of more information of the watch - the application doesn't crash f there is not enoug datapoints - at the end of one hike, come back on initial page - possiblity to delete a hike at the end of one

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ allprojects {
 
                 path_send_HR:"/SEND_HR",
                 heart_rate:"HEART_RATE",
+
+                path_send_pace:"/SEND_PACE",
+                pace:"PACE",
+
+                path_send_DISTANCE:"/SEND_DISTANCE",
+                distance:"DISTANCE"
         ]
     }
 }
